--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mocha": "^10.0.6",
     "@types/sinon": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^8.55.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^1.0.1",
     "mocha": "^10.2.0",
     "mocha-junit-reporter": "^2.2.1",
     "nyc": "^15.1.0",
