--- a/.nycrc
+++ b/.nycrc
@@ -9,6 +9,7 @@
         "coverage/*",
         ".nyc_output/*",
         ".webpack/",
-        "webpack.config.js"
+        "webpack.config.js",
+        "src/handlerHttp.ts"
     ]
 }
