--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
         "esModuleInterop": true,
         "target": "es2018",
         "outDir": "./dist/*",
-        "rootDir": "./src/"
+        "rootDir": "./"
     },
     "exclude": ["node_modules"],
-    "include": ["src/"]
+    "include": ["src/", "test/"]
 }
