--- a/package.json
+++ b/package.json
@@ -14,24 +14,15 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.130",
     "@types/aws-sdk": "^2.7.0",
-    "@types/chai": "^4.3.11",
-    "@types/chai-as-promised": "^7.1.8",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/mocha": "^10.0.6",
-    "@types/sinon": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^8.55.0",
-    "eslint-config-xo": "^0.43.1",
-    "eslint-config-xo-typescript": "^1.0.1",
-    "mocha": "^10.2.0",
-    "mocha-junit-reporter": "^2.2.1",
-    "nyc": "^15.1.0",
+    "jest": "^29.7.0",
     "serverless-aws-resource-names": "^0.1.2",
     "serverless-webpack": "^5.13.0",
-    "sinon": "^17.0.1",
+    "ts-jest": "^29.2.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
