[feature] se agrega codigo en todas las capas y se agrega test en capa de infraestructura

--- a/serverless.yml
+++ b/serverless.yml
@@ -35,6 +35,9 @@ Outputs:
 
 functions:
   my-function-name:
+    environment:
+      API_URL: ${param:apiUrl}
+      
     timeout: 20
     handler: src/handlerHttp.lambdaHandler
     tags:
