--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha",
-    "test-dev": "nyc --reporter=text mocha --reporter spec",
-    "coverage": "nyc npm run test"
+    "unit": "jest",
+    "lint": "eslint '*.ts' --quiet --fix",
+    "lint:json": "eslint '*.ts' --quiet --fix > eslint-report.json",
+    "compile": "tsc",
+    "test": "npm run compile && npm run unit",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
+    "husky": "^9.1.4",
     "jest": "^29.7.0",
     "serverless-aws-resource-names": "^0.1.2",
     "serverless-webpack": "^5.13.0",
