--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "unit": "jest",
-    "lint": "eslint '*.ts' --quiet --fix",
-    "lint:json": "eslint '*.ts' --quiet --fix > eslint-report.json",
     "compile": "tsc",
     "test": "npm run compile && npm run unit",
+    "unit": "jest",
+    "lint:json": "eslint './src/**/*.ts' --quiet --fix > eslint-report.json",
+    "format:ts": "prettier --write './src/**/*.ts'",
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "./src/**/*.ts": [
+      "eslint --quiet --fix ",
+      "prettier --write "
+    ],
+    "**/*.js": [
+      "eslint --fix ",
+      "prettier --write"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -24,6 +34,8 @@
     "eslint": "^8.55.0",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.3",
     "serverless-aws-resource-names": "^0.1.2",
     "serverless-webpack": "^5.13.0",
     "ts-jest": "^29.2.4",
